2001-12-17  Alexander V. Lukyanov <lav@yars.free.net>

	* GetFileInfo.cc: move SetCwd(origdir) to dtor; improve comment.
	* MirrorJob.cc: try to enable write access to file being appended.
	*

2001-12-17  Glenn Maynard <g_ld@zewt.org>

	* commands.cc: queue --delete has no argument.

2001-12-17  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: clean up removing/chmod-ing; allow them
	  to be excuted in parallel; start scripting support.
	* GetJob.cc, GetJob.h, commands.cc: get -e option to remove target
	  file first.

2001-12-17  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: encode ' in bookmarks.
	* CmdExec.cc: quote ' properly.
	* MirrorJob.cc: handle mirror:parallel-transfer-count.
	* bookmark.cc, bookmark.h, keyvalue.cc, keyvalue.h, commands.cc:
	  don't show bookmarked passwords on `bookmark list', replace them
	  with XXXX.

2001-12-15  Alexander V. Lukyanov <lav@yars.free.net>

	* FindJob.cc: use default session's cwd as default url path.
	* Fish.cc, Fish.h, HttpDir.cc, Http.h: add ParseLongList method
	  (for Http - by Glenn Maynard).
	* GetFileInfo.cc: call LsCache::SetDirectory.
	* MirrorJob.cc: don't delete exclude in non-root mirror; add -X/-I
	  options; handle default exclude setting mirror:exclude-regex;
	  don't exclude all directories if first pattern is include pattern.
	* PatternSet.cc, PatternSet.h: simplify matching; fix Glob matching.
	* resource.cc: remove mirror:include-regex.

2001-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc: Exclude appends / for directories before matching.
	* PatternSet.cc, PatternSet.h: match last directory components
	  in Glob::Match, e.g. abc/def/ghi.zip matches def/*.zip.

2001-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, FileSet.cc, FileSet.h, FindJob.cc,
	  FindJob.h, GetFileInfo.cc, LocalAccess.cc, Makefile.am, MirrorJob.cc,
	  MirrorJob.h, NetAccess.cc, PatternSet.cc, PatternSet.h, commands.cc,