@@ -1,8 +1,12 @@
+2001-12-18  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* FileCopy.cc, FileCopy.h, Filter.cc, Filter.h: an attempt to
+	  show correct status on disk full condition.
+
 2001-12-17  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* GetFileInfo.cc: move SetCwd(origdir) to dtor; improve comment.
 	* MirrorJob.cc: try to enable write access to file being appended.
-	*
 
 2001-12-17  Glenn Maynard <g_ld@zewt.org>
 
